--- a/style.css
+++ b/style.css
@@ -1,32 +1,69 @@
 
 
  body {
-    background: white;
+    background:fafafa;
     padding:0;
-    margin:0;
-    box-sizing:border-box;
-  }
-  
-  nav{
-    opacity:0;
-    transition: 2s opacity 2s ease;
-  }
-  
-  nav{
-    display:flex;
-    justify-content:space-between;
-    background:#212121;
-    padding:24px;
-    color:white;
-    opacity:1;
+    margin:0; 
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
     
+  
+   }  
+  
+   /* navigation styles */
+  
+    nav{
+      opacity:0;
+      transition: 2s opacity 2s ease;
+    }
+    
+    nav{
+      display:flex;
+      justify-content:space-between;
+      background:#212121;
+      padding:24px;
+      color:white;
+      opacity:1;
+      
+    }
+    
+    nav ul{
+      display:flex;
+      list-style-type:none;
+      justify-content:space-between;
+      width:300px;
+      padding:0;
+      margin:0;
+      
+  
+    }
+    nav a {
+        color:white;
+    }
+  
+  /* tabs styling */
+  .tabs{
+      display:flex;
+      justify-content:stretch;
+  }
+  .tab{
+      width:100%;
+      display: flex;
+      flex-direction: column;
   }
   
-  nav ul{
-    display:flex;
-    list-style-type:none;
-    justify-content:space-between;
-    width:300px;
-    padding:0;
-    margin:0;
+  .tab a{
+      background:#ccc;
+      padding:16px;
+      margin:0;
   }
+  
+  .tab.cat.selected a, .tab.mfg.selected a{
+      background: #aaa;
+  }
+  ul.contents{
+      list-style-type: none;
+      padding:0;
+      margin:16px; 
+  }
+  /* category and manufacturer lists */
